# crypto-trading-view

./: .env  README.md  docker-compose.yaml  pyproject.toml
crypto_trading_view/: config.py  main.py
crypto_trading_view/connections/: crypto.py
crypto_trading_view/controller/: favorite.py  user.py
crypto_trading_view/database/: connection.py  init.py  populate.py
crypto_trading_view/database/model/: favorite.py  index.py  user.py
crypto_trading_view/routes/: _.py  crypto.py  favorite.py  user.py
crypto_trading_view/schema/: commons_schema.py  crypto.py  index.py  user_schema.py
crypto_trading_view/service/: _.py  favorite.py  user.py
