[tool.poetry]
name = "crypto-trading-view"
version = "0.1.0"
description = "follow your favorite cryptos"
authors = ["samuel-ricardo <samuelricardoofficial@gmail.com>"]
readme = "README.md"
packages = [{include = "crypto_trading_view"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
